Criando repositorio com prisma para médico
