# swagger.json
@@ -42,8 +42,9 @@
         "/login": {
             "post": {
                 "description": "Autenticação do usuário",
-                "tags": ["users"],
-
+                "tags": [
+                    "users"
+                ],
                 "requestBody": {
                     "content": {
                         "application/json": {
@@ -54,11 +55,36 @@
                     }
                 },
                 "responses": {
-                    "200":{
+                    "200": {
                         "description": "Token gerado"
                     },
                     "401": {
                         "description": "mensagem de erro"
+                    }
+                }
+            }
+        },
+        "/doctors": {
+            "post": {
+                "description": "Cadastro de um médico",
+                "tags": [
+                    "doctors"
+                ],
+                "requestBody": {
+                    "content": {
+                        "application/json": {
+                            "schema": {
+                                "$ref": "#/components/schemas/DoctorRequest"
+                            }
+                        }
+                    }
+                },
+                "responses": {
+                    "200": {
+                        "description": "Médico criado com sucesso"
+                    },
+                    "400": {
+                        "description": "Erro de cadastro"
                     }
                 }
             }
@@ -122,6 +148,42 @@
                         "type": "string",
                         "description": "Password de login",
                         "example": "Password_test"
+                    }
+                }
+            },
+            "DoctorRequest": {
+                "type": "object",
+                "properties": {
+                    "crm": {
+                        "type": "string",
+                        "description": "CRM do médico",
+                        "example": "123456",
+                        "length": 6
+                    },
+                    "email": {
+                        "type": "string",
+                        "description": "Email do médico",
+                        "example": "email@email.com.br"
+                    },
+                    "username": {
+                        "type": "string",
+                        "description": "Username do médico",
+                        "example": "username"
+                    },
+                    "password": {
+                        "type": "string",
+                        "description": "Senha do médico",
+                        "example": "password"
+                    },
+                    "name": {
+                        "type": "string",
+                        "description": "Nome do médico",
+                        "example": "username"
+                    },
+                    "specialityId": {
+                        "type": "string",
+                        "description": "Especialidade do médico",
+                        "format": "uuid"
                     }
                 }
             }
